# codegen

./: .gitignore  README.md  package.json
codegen/: .env  Cargo.toml  Dockerfile  codegen.env  codegen_entrypoint.sh  docker-compose.yml  schema.prisma  test.json  test.yaml
codegen/src/: helper.rs  lib.rs  main.rs
codegen/src/templates/: controller.hbs  dbSchemas.hbs  model.hbs  parameters.hbs  schemas.hbs  service.hbs
codegen/src/templates/typescript-express-server/: api_controller.hbs  api_model.hbs  api_parameters.hbs  api_service.hbs  api_validator.hbs  db_dbSchemas.hbs  responses_error.hbs
codegen/swagger/: swagger.json  swagger_dht22.json  swagger_purify.json
server/: .eslintrc.js  Dockerfile  docker-compose.yml  mysql.Dockerfile  package.json  tsconfig.json
server/certreq/: csr.pem  file.crt  localhost.crt  localhost.key  private.pem
server/deploy/: create_backend_mysql_user.sh  docker-compose.dev.yml  docker-compose.yml  mysql.Dockerfile  nginx.Dockerfile  nginx_certbot.sh  node-dev.Dockerfile  node-pod.Dockerfile
server/deploy/nginx_templates/: default.conf.template
server/other/: redis.conf  swagger.json
server/prisma/: schema.prisma
server/src/: errors.ts  expressApp.ts  googleApiClient.ts  index.ts  jwt.ts  responseErrors.ts  sessions.ts
server/src/apiModules/: baseController.ts  errors.ts  index.ts
server/src/controllers/: authController.ts  controllerAbstract.ts
server/src/redisClient/: index.ts
server/src/routers/: authRouter.ts  routerAbstract.ts  routerIndex.ts
server/src/utils/: axios.ts  axiosGSPay.ts  (+1 more)
(+244 files in other folders)
