[package]
name = "codegen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yaml-rust = "0.4"
handlebars = "4.2"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_derive = "1.0.133"
Inflector = "0.11.4"
linked-hash-map = "0.5.4"
lazy_static = "1.4.0"
regex = "1.4.0"


 env_logger = "0.9.0"
